--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
 	<br> 
 	<p> La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités
 	différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière 
-	d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux 
-	réfugiés qui sont définies dans les lois nationales et les lois internationales.
-	Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des
+	d’immigration. En revanche,<!-- les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux 
+	réfugiés qui sont définies dans les lois nationales et les lois internationales.--> le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des
 	réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies,
 	dont tous les pays de l’Union européenne.</p> 
 	<p>En particulier, les réfugiés doivent être accueillis quelle que soit leur situation économique.
@@ -132,10 +131,10 @@
 	"When refugees stopped being migrants" (2013)</a>, montrent que l'apparition d'un statut à part de réfugié empêche
 	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.</p>
 	
-	Sur cette page, nous décrirons les différentes situations dans lesquelles se trouvent les
+	<!--Sur cette page, nous décrirons les différentes situations dans lesquelles se trouvent les
 	personnes en migration, ainsi que les différents statuts juridiques auxquels elles peuvent accéder. 
 	Nous nous concentrerons plus particulièrement sur les demandeurs d'asile, et retracerons la chronologie des principaux 
-	événements de cette crise des migrants et des réfugiés.  
+	événements de cette crise des migrants et des réfugiés.  -->
 </div>
 </div>
 			</div>
