--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   		<h1 style="color:#004953" class="titre_section"> De quoi parle-t-on ? </h1>
 <div class="container">
 <div style="background-color:  transparent; border:5px solid white;border-radius: 25px;margin-bottom: 10px; padding: 8px 8px 8px 8px"> 
-	<h2 style="color:#000000"> Crise des migrants ou crise des réfugiés? </h2>
+	<h2 style="color:#004953"> Crise des migrants ou crise des réfugiés? </h2>
 <div style="color:#000000; text-align: justify;">	
 	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur 
 	les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques
@@ -140,7 +140,7 @@
 			</div>
 			<br>
 			<!-- Graphe intro Irène -->
-			<h2> Eclairage sur la situation mondiale en un graphique </h2>	
+			<h2> Éclairage sur la situation mondiale en un graphique </h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: center">
 				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </div>
