--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 			<h2> Éclairage sur la situation mondiale en un graphique </h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: center">
-				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </div>
+				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </h4>
 				<div id="container" > </div>
 				<div style="display:flex;flex-direction:column; text-align: justify">
 				<div> <font color="#24292E"> Plus de déplacés internes que de réfugiés depuis 2006. </font> </div>
