--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: center">
 				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </h4>
+				<br> <font color="#24292E">Depuis 2006, il y a plus de déplacés internes que de réfugiés depuis 2006 </font><br>
+				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012 </font>
 				<div id="container" > </div>
 				<div style="display:flex;flex-direction:column; text-align: justify">
-				<div> <font color="#24292E"> Plus de déplacés internes que de réfugiés depuis 2006. </font> </div>
-				<div> <font color="#24292E"> Trois fois plus de demandeurs d'asile depuis 2012. (Cliquez sur la légende pour voir le changement d'échelles) </font> </div>
+				Cliquez sur la légende pour voir le changement d'échelles
 
 				</div>
 			
@@ -161,7 +162,7 @@
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							<center> <i class="icon big rounded fa fa-bomb"></i> </center>
 							<font color="#24292E">
-							<p style="text-align: justify;text-justify: inter-word;" ><b style="color:#0f52ba">Un réfugié </b> est une personne qui se trouve hors du pays 
+							<p style="text-align: justify;text-justify: inter-word; color:#004953;" >Un <b style="color:#0f52ba">réfugié </b> est une personne qui se trouve hors du pays 
 								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
 								et qui “du fait de sa race, de sa religion, de sa nationalité, 
 								de son appartenance à un groupe social déterminé 
@@ -172,7 +173,7 @@
 					         <section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							 <center> <i class="icon big rounded fa fa-question"></i> </center>
 					<font color="#24292E">	 
-						<p>Un réfugié est un ancien <b style="color:#009688">demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés</b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
+						<p style="color:#004953;" >Un réfugié est un ancien <b style="color:#009688">demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés</b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
 						</font> </section>
 				<!--	
                         <section class="4u 12u$(small)" style ="text-justify: inter-word">
@@ -183,7 +184,7 @@
 -->
 						<section class="4u$ 12u$(small)" style ="text-justify: inter-word">
 						 <center> <i class="icon big rounded fa fa-child"></i> </center>
-						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;">Contrairement aux réfugiés, les <b style="color:#d7837f">déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
+						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;color:#004953; ">Contrairement aux réfugiés, les <b style="color:#d7837f">déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
 						 </font> </section>
 					</div>
 				</div>
