--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 	différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière 
 	d’immigration. En revanche,<!-- les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux 
 	réfugiés qui sont définies dans les lois nationales et les lois internationales.--> le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des
-	réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies,
-	dont tous les pays de l’Union européenne.</p> 
+	réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies et c’est une condition nécessaire pour entrer dans l’Union Européenne</p> 
 	<!-- <p>En particulier, les réfugiés doivent être accueillis quelle que soit leur situation économique.
 	La création d'un statut à part avait pour vocation de protéger systématiquement les personnes confrontées à des 
 	situations dramatiques dans leur pays d'origine. Toutefois, certains travaux en sociologie, et notamment l'article de
@@ -254,14 +253,13 @@
 			<div style="font-size: 100px;">
 			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
-  			<h1 style="color:#004953"> La "crise des migrants" en Europe : état des lieux </h1>
+  			<h1 style="color:#004953"> Les demandes d'asile en Europe </h1>
 			
 	<div class="container" style="display:flex;justify-content:space-between;">
 	
 		<div style="color:#004953;  width: 100%;text-align: justify;text-justify: inter-word;"> <br>
 		<ul>
-		<li>Tous les pays européens sont signataires de la convention de Genève de 1951
-			et c’est une condition pour entrer dans l’Union Européenne. </li>
+	<!--
 		<li> En 2015, 1,2 millions de personnes ont demandé l’asile à un Etat membre de l’Union européenne. 
 		Soit plus du double de l’année précédente et la moitié du nombre de réfugiés accueillis par la Turquie en 2015.  </li>
 		<li>Dans les années 1970, 80% des demandeurs d’asile obtenaient le statut de réfugié en Europe. 
@@ -269,7 +267,7 @@
 		Ceci peut s'expliquer par le changement d'approche adopté par les Etats européens, 
 		qui contrairement à aujourd'hui, abordaient plus l’immigration en termes de main d’œuvre, qu'en termes de sécurité. </li>
 		</ul>
-		
+	-->	
 		<!--En 1990, les accords de Dublin ont unifié la politique européenne. 
 		On assiste à la fin des demandes d’asile multiples – asylum shopping – et au respect de la réponse donnée par un autre pays européen.
 		Ces accords ont été renouvelés en 2003 avec Dublin II, fondés sur le principe « one stop, one shop », 
@@ -282,7 +280,7 @@
 
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
-			<h2> Quelques dates clé </h2>
+			<h2> La "crise des migrants" en Europe : état des lieux </h2>
 <div class="container" style="align-self:center;">
 <iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="550" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
