--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
 </div>			
 </section>
 		<!-- Carte Adeline -->
-<section id="two" class="wrapper style13 align-center">
+<section id="two" class="wrapper style12 align-center">
 			<div class="container">
 				<header>
-					<h2>Demandes d'asiles et taux d'acceptation (2015)</h2>
+					<h2>Répartition géographique des demandes d'asile en Europe</h2>
 					<p style="color:#004953"> La France reçoit 6 fois moins de demandes d'asile que l'Allemagne et accepte une proportion moindre de demandes </p>
 				</header>				
 				
