--- a/index.html
+++ b/index.html
@@ -292,9 +292,7 @@
 			<div class="container">
 				<header>
 					<h2>Répartition géographique des demandes d'asile en Europe</h2>
-					<p style="color:#004953"> La France reçoit 6 fois moins de demandes d'asile que l'Allemagne et accepte une proportion moindre de demandes </p>
-					<p style="color:#004953"> En 2015, 70 570 demandes d'asile ont été déposées en France par des individus ressortissants d'un pays n'appartenant pas à l'Union Européenne. 29% ont été acceptées. Le pays qui accepte la plus grande part relative des demandes qu'il reçoit est Chypre, avec un taux de 75%, suivi de Malte (74%) et du Danemark (48%). </p>
-
+					<p style="color:#004953;text-align: justify;"> La France reçoit 6 fois moins de demandes d'asile que l'Allemagne et accepte une proportion moindre de demandes. En 2015, 70 570 demandes d'asile ont été déposées en France par des individus ressortissants d'un pays n'appartenant pas à l'Union Européenne. 29% ont été acceptées. Le pays qui accepte la plus grande part relative des demandes qu'il reçoit est Chypre, avec un taux de 75%, suivi de Malte (74%) et du Danemark (48%). </p>
 				</header>				
 				
 				<script id="infogram_0_map-9075157905404" title="Map" src="//e.infogr.am/js/dist/embed.js?H42" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:0px solid #dadada;margin:0 30px"><a href="https://infogr.am/map-9075157905404" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Map</a><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
