--- a/index.html
+++ b/index.html
@@ -311,6 +311,19 @@
 
 <!-- <div class="infogram-embed" data-id="7df11091-58b7-4766-b15f-0b1b8c9b3a4f" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
 -->
+
+<div class="paraxify intermede-2" style="background-position: center center;">
+</div>
+	<!-- Troisième partie -->	
+		
+		<section id="france" class="wrapper style13 align-center">
+		<div style="font-size: 100px;">
+		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
+		</div>
+ 			<h1 style="color:#004953"> Les demandeurs d'asile en France</h1>
+<!-- Origine -->
+
+
 <section id="two" class="wrapper style12 align-center">
 		<h2> Evolution des demandes d'asile en France </h2>
 	<h3> Des vagues successives liées à des événements historiques </h3>
@@ -321,16 +334,7 @@
 
 	</div>
 </section>
-<div class="paraxify intermede-2" style="background-position: center center;">
-</div>
-	<!-- Troisième partie -->	
-		
-		<section id="france" class="wrapper style13 align-center">
-		<div style="font-size: 100px;">
-		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
-		</div>
- 			<h1 style="color:#004953"> Les demandeurs d'asile en France: qui sont-ils? </h1>
-<!-- Origine -->
+			
 			<h2> D'où viennent-ils? </h2>
 <div> <font color="#24292E"> 10 principaux pays d'origine des demandeurs d'asile en France (2014 et 2015, premières demandes) </font> </div> <br>
 <div class="container" style="display:flex;justify-content:space-between;">	
