--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
 
 <section id="two" class="wrapper style13 align-center">
-		<h2> Evolution des demandes d'asile en France </h2>
+		<h2> Evolution des demandes d'asile </h2>
 	<h3> Des vagues successives liées à des événements historiques </h3>
 <div class="container" >
 
@@ -335,7 +335,7 @@
 	</div>
 </section>
 			
-			<h2> D'où viennent-ils? </h2>
+			<h2> Les demandeurs d'asile : d'où viennent-ils? </h2>
 <div> <font color="#24292E"> 10 principaux pays d'origine des demandeurs d'asile en France (2014 et 2015, premières demandes) </font> </div> <br>
 <div class="container" style="display:flex;justify-content:space-between;">	
 
@@ -346,7 +346,9 @@
 			</div>
 	
 			<h2> Quel âge ont-ils? </h2>
-<div> <font color="#24292E"> Répartition par âge des demandeurs d'asile (ressortissants d'un pays tiers) en UE en 2015 (premières demandes) </font> </div> <br>
+			
+			<h4> Répartition par âge des demandeurs d'asile (ressortissants d'un pays tiers) en UE en 2015 (premières demandes) </h4>
+<div style ="text-align: justify"> <font color="#24292E"> Près d'un tiers des demandeurs d'asile sont mineurs. </font> </div> <br>
 <!-- Composition par âge de la population migrante -->
 <div class="container">
 <div class="infogram-embed" data-id="88c3dfb3-409c-4a2c-8356-f43c5472e55a" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
