--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
 		<div style="font-size: 100px;">
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
- 			<h1 style="color:#004953"> Qu'en disent les candidats à la présidentielle? </h1>
- 	<h2> Focus sur le premier débat entre les principaux candidats </h2>
+ 			<h1 style="color:#004953"> Qu'en pensent les candidats à la présidentielle? </h1>
+ 	<h2> Focus sur le débat du 20 mars 2017 </h2>
 		
 
  <div class="compteur" id="compteur" style="position: fixed;margin-left: auto;
@@ -491,7 +491,6 @@ $(document).ready(function(){
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
 		<h1 style="color:#004953"> Quizz </h1>
-		<h2 style="color:#004953"> Serez vous meilleurs que nos candidats: testez vos connaissances ! </h2>
 
 		<div class="container">
 		 <div id="frame" role="content"></div> 
