--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 			<h2> Éclairage sur la situation mondiale en un graphique </h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: center">
-				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </h4>
-				<br> <font color="#24292E">Depuis 2006, il y a plus de déplacés internes que de réfugiés depuis 2006 </font><br>
+				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR)</font> </h4>
+				<br> <font color="#24292E">Depuis 2006, il y a plus de déplacés internes que de réfugiés depuis 2006 </font>
 				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012 </font>
 				<div id="container" > </div>
 				<div style="display:flex;flex-direction:column; text-align: justify">
-				Cliquez sur la légende pour voir le changement d'échelles
-
+					<center> Cliquez sur la légende pour voir le changement d'échelles. </center>
+<br>
 				</div>
 			
 			
@@ -254,9 +254,11 @@
 			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
   			<h1 style="color:#004953"> Les demandes d'asile en Europe </h1>
+		
 			
 	<div class="container" style="display:flex;justify-content:space-between;">
 	
+		
 		<div style="color:#004953;  width: 100%;text-align: justify;text-justify: inter-word;"> <br>
 		<ul>
 	<!--
@@ -996,6 +998,11 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<p> Nous sommes quatre étudiants en dernière année à l'ENSAE ParisTech et à la Paris School of Economics.</p>
 							<p> Ce projet a été réalisé pour notre cours de visualisation de données à l'ENSAE.</p>
 							<p> Nous souhaitons utiliser nos compétences d'économistes statisticiens pour nous engager et mettre en lumière une situation complexe et cruciale de notre époque.</p>
+							<h3>Pour en savoir plus ? </h3>
+							<p> certains travaux en sociologie, et notamment l'article de
+	Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">
+	"When refugees stopped being migrants" (2013)</a>, montrent que l'apparition d'un statut à part de réfugié empêche
+	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.</p>
 							
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
