--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Bonjour, je m'appelle Emmanuel. <br> Regardez moi je m'appelle Emmanuel <br> Allez regardez moi <br> Bisous
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Bonjour, je m'appelle Emmanuel. <br> 
 </div>
 </div>
 	
