--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<p> Nous sommes quatre étudiants en dernière année à l'ENSAE ParisTech et à la Paris School of Economics.</p>
 							<p> Ce projet a été réalisé pour notre cours de visualisation de données à l'ENSAE.</p>
 							<p> Nous souhaitons utiliser nos compétences d'économistes statisticiens pour nous engager et mettre en lumière une situation complexe et cruciale de notre époque.</p>
-							<h3>Pour en savoir plus ? </h3>
+							<h3>Pour en savoir plus  </h3>
 							<p> Certains travaux en sociologie, et notamment l'article de
 	Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">
 	"When refugees stopped being migrants" (2013)</a>, montrent que l'apparition d'un statut à part de réfugié empêche
