--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     </a>
                     
     <!-- Google+ -->
-                    <a href="https://plus.google.com/share?url=https://pregoles.github.io/migmig" target="_blank">
+                   <!-- <a href="https://plus.google.com/share?url=https://pregoles.github.io/migmig" target="_blank">
                         <img width="50" height="50" src="images/google.png" alt="Google" />
-                    </a>
+                    </a> -->
     
     <!-- LinkedIn -->
                     <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://pregoles.github.io/migmig&title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target='_blank'>
