--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<div style="font-size: 200px;">
+				<div style="font-size: 250px;">
 				<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 				</div>
-				<h2 class="animated fadeInUpBig" "font-weight:bold ; color: #004953">Lumière sur les migrations</h2>
+				<h2 class="animated fadeInUpBig" "color: #004953">Lumière sur les migrations</h2>
 				<h3 style="font-weight:bold ; color:#004953">Déchiffrer la "crise des migrants" en Europe et en France </h3>
                 				
 			</section>
