--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ $(document).ready(function(){
        },{
          "name": "Collège de France",
          "address": "http://www.college-de-france.fr/site/programme-pause/index.htm", 
-         "note" : "Des subventions aux établissements d’enseignement supérieur et/ou de recherche publics projetant d’accueillir des scientifiques en situation d’urgence."
+         "note" : "Des subventions aux établissements d’enseignement supérieur pour accueillir des scientifiques en situation d’urgence."
        },]
      }, {
        "name": "Etudiants",
@@ -587,11 +587,11 @@ $(document).ready(function(){
        }, {
          "name": "Sciences Po Refugee Help",
          "address": "http://www.refugeehelp.fr/", 
-         "note" : "Aide administrative et juridique à la procédure d’asile, leçons de Français, activités socio-culturelles et aide matérielle..les Sciences pistes s’engagent ! "
+         "note" : "Aide administrative et juridique à la procédure d’asile, leçons de Français, aide matérielle... les Sciences pistes s’engagent ! "
        }, {
          "name": "Kiron",
          "address": "http://www.sciencespo.fr/sites/default/files/22062016_CP_Sciences%20Po_Kiron.pdf", 
-         "note" : "Sciences Po mets à disposition une sélection de cours sur la plateforme numérique de Kiron pour aider les réfugiés à reprendre leurs études supérieures."
+         "note" : "Sciences Po mets à disposition une sélection de cours sur la plateforme numérique de Kiron pour aider les réfugiés à reprendre leurs études."
        },{
          "name": "MigrENS",
          "address": "http://www.migrens.ens.fr/", 
@@ -619,7 +619,7 @@ $(document).ready(function(){
        },    {
          "name": "Jeu intéractif Arte",
          "address": "http://refugees.arte.tv/fr", 
-         "note":"Dans la peau d'un envoyé spécial pour raconter les camps de refugiés au Népal, en Irak et au Liban."
+         "note":"Incarnez un envoyé spécial pour raconter les camps de refugiés."
        } ]
      },
         {
@@ -628,7 +628,7 @@ $(document).ready(function(){
        "children": [{
          "name": "Les Grands Voisins",
          "address": "https://lesgrandsvoisins.org/leprojet/", 
-         "note":"Un village éphémère de 600 “mal-logés”, 400 artistes, entrepreneurs sociaux… sur le site de l’ancien hôpital St-Vincent de Paul…à découvrir avant la fin de l’été ! "
+         "note":"Un village éphémère de 600 “mal-logés”, 400 artistes, entrepreneurs sociaux… sur le site de l’ancien hôpital St-Vincent de Paul "
        }, {
          "name": "Les Cuistots Migrateurs",
          "address": "http://lescuistotsmigrateurs.com/", 
