--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Bonjour, je m'appelle Emmanuel. <br> 
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Emmanuel Macron... <br> 
 </div>
 </div>
 	
@@ -471,7 +471,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba;text-align: justify;text-justify: inter-word;"> Bien dit Jean-Luc!
+<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon...
 </div>
 </div>
 	</div>
