--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ $(document).ready(function(){
        },{
          "name": "MigrENS",
          "address": "http://www.migrens.ens.fr/", 
-         "note": "Le Programme Etudiant Invité est destiné à l'accueil des réfugié.e.s et des migrant.e.s étudiant.e.s du supérieur au sein de l'Ecole Normale Supérieure. "
+         "note": "Un programme destiné à l'accueil des réfugiés et des migrants étudiants du supérieur au sein de l'Ecole Normale Supérieure. "
        }, {
          "name": "Black Sheep",
          "address": "http://blacksheephello.wixsite.com/blacksheep", 
