--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@ $(document).ready(function(){
        }, {
          "name": "BD Intéractive",
          "address": "http://info.arte.tv/fr/no-mans-land-de-cyrille-pomes", 
-         "note":"No Man's Land de Cyrille Pomès."
+         "note":" \"No Man's Land\" de Cyrille Pomès."
        }]
      }, {
        "name": "En direct",
