--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
 					         <section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							 <center> <i class="icon big rounded fa fa-question"></i> </center>
 					<font color="#24292E">	 
-						<p>Un réfugié est un ancien <b style="font-weight:bold ;color:#009688">demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b style="font-weight:bold">déboutés</b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
+						<p>Un réfugié est un ancien <b style="font-weight:bold ;color:#009688">demandeur d’asile</b> mais tous les demandeurs d’asile 
+							ne sont pas reconnus réfugiés (en cas de refus, ils sont qualifiés de “<b style="font-weight:bold">déboutés</b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
 						</font> </section>
 				<!--	
                         <section class="4u 12u$(small)" style ="text-justify: inter-word">
